# wombat

./: .gitignore  .gitmodules  .liccor  CMakeLists.txt  Makefile  _config.yml  about.md  app.cpp  app.hpp  index.html  main.cpp  settings.json  tests.cpp  tests.hpp
_includes/: footer.html
_posts/: 2014-07-12-welcome-to-jekyll.markdown  2014-10-02-data-models.md  2014-10-03-metal-claw.md  2014-10-04-metal-claw.md
cmake/Modules/: FindAllegro.cmake  FindJansson.cmake  FindSDL.cmake  FindSDL2.cmake  FindSDL_image.cmake  FindSDL_ttf.cmake  GBA.cmake  address_sanitizer.cmake
common/: CMakeLists.txt  Readme.md  bounds.cpp  bounds.hpp  common.hpp  flyweight.cpp  flyweight.hpp  point.cpp  point.hpp
core/: .gitignore  CMakeLists.txt  _cliprectstack.cpp  _cliprectstack.hpp  _corecapabilities.hpp  _memfs.cpp  _memfs.hpp  _misc.hpp  _sdlglobs.hpp  _sdlthreads.cpp  _sdltls.cpp  _submgr.cpp  _submgr.hpp  _threads.cpp  _threads.hpp  _tls.hpp  _viewportmgr.cpp  _viewportmgr.hpp  alcore.cpp  algfx.cpp  allegro_globs.hpp  channel.cpp  channel.hpp  core.cpp  core.hpp  corecapabilities.hpp  event.cpp  event.hpp  flyweight.cpp  flyweight.hpp  gfx.cpp  gfx.hpp  install_manifest.txt  misc.cpp  misc.hpp  modelio.cpp  modelio.hpp  sdlcore.cpp  sdlevent.cpp  sdlgfx.cpp  (+11 more)
core/gba/: _corecapabilities.hpp  _misc.cpp  _threads.cpp  _tls.cpp  core.cpp  corecapabilities.cpp  event.cpp  gfx.cpp  sync.cpp
core/sdl/: _corecapabilities.hpp  _misc.cpp  _threads.cpp  _tls.cpp  core.cpp  corecapabilities.cpp  event.cpp  gfx.cpp  sync.cpp
css/: main.css
models/: .gitignore  CMakeLists.txt  Makefile  enginemodels.cpp  enginemodels.cy  enginemodels.hpp  enginemodels.mod  enginesettings.cy  enums.hpp  generate_models.sh  generated.cpp  generated.hpp  modelmakerdefs.cpp  modelmakerdefs.hpp  models.cpp  models.cy  models.hpp
scripts/: check  cibuild  newcpp  runmake  setup_build  setup_build_debug  setup_build_gba
src/: CMakeLists.txt  Makefile
src/common/: CMakeLists.txt  bounds.cpp  bounds.hpp  common.hpp  flyweight.cpp  flyweight.hpp  point.cpp  point.hpp
src/core/: CMakeLists.txt  _cliprectstack.cpp  _cliprectstack.hpp  _memfs.cpp  _memfs.hpp  _misc.hpp  _submgr.cpp  _submgr.hpp  _threads.hpp  _tls.hpp  channel.hpp  core.hpp  corecapabilities.hpp  event.cpp  event.hpp  gfx.cpp  gfx.hpp  misc.cpp  misc.hpp  modelio.cpp  modelio.hpp  sync.cpp  sync.hpp  task.cpp  task.hpp  tls.hpp  types.hpp
src/core/gba/: _misc.cpp  _threads.cpp  _tls.cpp  core.cpp  corecapabilities.cpp  event.cpp  gfx.cpp  sync.cpp
src/core/sdl/: _misc.cpp  _threads.cpp  _tls.cpp  core.cpp  corecapabilities.cpp  event.cpp  gfx.cpp  sync.cpp
src/entities/: CMakeLists.txt  creature.cpp  creature.hpp  person.cpp  person.hpp
src/models/: CMakeLists.txt  Makefile  enums.hpp  generated.cpp  generated.hpp  json_read.cpp  json_read.hpp  json_test.cpp  json_write.cpp  json_write.hpp  modelgen_version  models.cy  models.hpp  ptr.cpp  ptr.hpp  types.cpp  types.hpp  unknown.cpp  unknown.hpp
src/ui/: CMakeLists.txt  textpane.cpp  textpane.hpp  ui.cpp  ui.hpp
src/wombat/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  tests.cpp  tests.hpp
src/world/: CMakeLists.txt  _etc.cpp  _etc.hpp  animlayer.cpp  animlayer.hpp  camera.cpp  camera.hpp  event.hpp  person.cpp  person.hpp  personclass.cpp  personclass.hpp  sprite.cpp  sprite.hpp  spriteclass.cpp  spriteclass.hpp  tile.cpp  tile.hpp  tileclass.cpp  tileclass.hpp  world.cpp  world.hpp  zone.cpp  zone.hpp
tests/: boxman.json
wombat/: app.cpp  app.hpp  main.cpp  tests.cpp  tests.hpp
wombat_home/Animations/: Animation1.json
wombat_home/Resources/SpriteSheets/: SpriteSheet1.json  SpriteSheet2.json
wombat_path/: Init.json
wombat_path/Animation/: .json  Animation1.json  Dirt.json  Water.json
wombat_path/Animations/: Animation1.json  Animation2.json  Dirt.json
wombat_path/Misc/: Font.json  SaveVariables.json
wombat_path/Person/: User.json
wombat_path/PersonClass/: User.json
wombat_path/Resources/SpriteSheet/: SpriteSheet1.json
wombat_path/Resources/SpriteSheets/: SpriteSheet1.json  SpriteSheet2.json
wombat_path/Users/: User.json
wombat_path/World/TileClass/: Dirt.json  Water.json
wombat_path/World/Tiles/: Tile1.json
wombat_path/World/Worlds/: World1.json
wombat_path/World/Zone/: Zone1.json
wombat_path/World/ZoneHeader/: Zone1.json
wombat_path/World/ZoneHeaders/: Zone1.hjson  Zone1.json
wombat_path/World/Zones/: Zone1.json
world/: CMakeLists.txt  _etc.cpp  _etc.hpp  animlayer.cpp  animlayer.hpp  camera.cpp  camera.hpp  destructable.cpp  destructable.hpp  event.hpp  person.cpp  person.hpp  personclass.cpp  personclass.hpp  sprite.cpp  sprite.hpp  spriteclass.cpp  spriteclass.hpp  tile.cpp  tile.hpp  tileclass.cpp  tileclass.hpp  tileinstance.cpp  tileinstance.hpp  world.cpp  world.hpp  worldobject.cpp  worldobject.hpp  zone.cpp  zone.hpp
